feat: validations, swagger and errors
